k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: lorenzogaetani/k8s-getting-started:0.0.1
        ports:
        - containerPort: 80
